	PR middle-end/60484 	* common.opt (dump_base_name_prefixed): New Variable. 	* opts.c (finish_options): Don't prepend directory to x_dump_base_name 	if x_dump_base_name_prefixed is already set, set it at the end.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@208571 138bc75d-0d04-0410-961f-82ee72b054a4